changing content height to try to fix hidden mobile navbar on mobile browsers

--- a/src/components/BaseLayout/BaseLayout.module.css
+++ b/src/components/BaseLayout/BaseLayout.module.css
@@ -1,7 +1,7 @@
 .layout {
   width: 100%;
   height: 100%;
-  min-height: 100vh;
+  min-height: 100%;
 }
 
 .content {
@@ -10,7 +10,7 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   padding: 10px;
   overflow: scroll;
 }
